<resources>
    <string name="app_name">TaskTrifleAppNative</string>
    <string name="add_new_task">Add a new task</string>
    <string name="tasks">Tasks</string>
    <string name="addItem">Add task</string>
    <string name="editItem">Edit the task</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="due_date">Due Date</string>
    <string name="priority">Priority</string>
    <string name="status">Status</string>

    <string-array name="priority_options">
        <item>Choose Priority</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string name="choose_priority">Choose Priority</string>

    <string name="TitleSpecial">Title:</string>
    <string name="DescriptionSpecial">Description:</string>
    <string name="CategorySpecial">Category (personal/work):</string>
    <string name="StatusSpecial">Status:</string>
    <string name="PrioritySpecial">Priority (high/medium/low):</string>
    <string name="DueDateSpecial">Due Date:</string>
</resources>