<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="28dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addTextHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/add_new_task"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/baseline_save_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/llabelTitleAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TitleSpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/addTextHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/llabelTitleAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_background" />

    <TextView
        android:id="@+id/llabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DescriptionSpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="144dp"
        android:fontFamily="@font/poppins"
        android:inputType="textMultiLine"
        android:hint="@string/description"
        android:gravity="top"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/llabelDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_background" />

    <TextView
        android:id="@+id/llabelCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CategorySpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editTextDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextCategory"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/category"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/llabelCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_background" />

    <TextView
        android:id="@+id/llabelStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StatusSpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editTextCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextStatus"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/status"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/llabelStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_background" />

    <TextView
        android:id="@+id/llabelPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrioritySpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editTextStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextPriority"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/priority"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/llabelPriority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_background" />

    <TextView
        android:id="@+id/llabelDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DueDateSpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editTextPriority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextDue_Date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/due_date"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/llabelDueDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
