<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateTaskActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextHeading" />

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/baseline_delete_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextHeading" />

    <TextView
        android:id="@+id/editTextHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/editItem"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/updateSaveButton"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/baseline_save_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/llabelTitleUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TitleSpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editTextHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTitleUpdate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/llabelTitleUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/llabelDescriptionUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DescriptionSpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editTextTitleUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextDescriptionUpdate"
        android:layout_width="0dp"

        android:layout_height="144dp"
        android:fontFamily="@font/poppins"
        android:inputType="textMultiLine"
        android:hint="@string/description"
        android:gravity="top"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/llabelDescriptionUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/llabelCategoryUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CategorySpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editTextDescriptionUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/editTextCategoryUpdate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/category"
        app:layout_constraintTop_toBottomOf="@id/llabelCategoryUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_background"
        />

    <TextView
        android:id="@+id/llabelStatusUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StatusSpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editTextCategoryUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextStatusUpdate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/status"
        app:layout_constraintTop_toBottomOf="@id/llabelStatusUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_background"
        />

    <TextView
        android:id="@+id/llabelPriorityUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrioritySpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editTextStatusUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextPriorityUpdate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/priority"
        app:layout_constraintTop_toBottomOf="@id/llabelPriorityUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_background" />

    <TextView
        android:id="@+id/llabelDueDateUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DueDateSpecial"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editTextPriorityUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextDue_DateUpdate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/due_date"
        app:layout_constraintTop_toBottomOf="@id/llabelDueDateUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_background" />


</androidx.constraintlayout.widget.ConstraintLayout>